Let Play write it's superfluous RUNNING_PID file somewhere harmless
We were deploying to Prod, but logs showed that Play was trying to write
the PID file where it didn't have permission:

```
FileNotFoundException: /usr/share/friendly-tailor/RUNNING_PID (Permission denied)
```

See also https://github.com/guardian/status-app/commit/0bb17def


```
$ journalctl -u friendly-tailor
May 03 17:10:47 ip-10-248-132-14 systemd[1]: Started Brief description.
May 03 17:10:47 ip-10-248-132-14 friendly-tailor[2278]: Oops, cannot start the server.
May 03 17:10:47 ip-10-248-132-14 friendly-tailor[2278]: java.io.FileNotFoundException: /usr/share/friendly-tailor/RUNNING_PID (Permission denied)
May 03 17:10:47 ip-10-248-132-14 friendly-tailor[2278]: at java.io.FileOutputStream.open0(Native Method)
May 03 17:10:47 ip-10-248-132-14 friendly-tailor[2278]: at java.io.FileOutputStream.open(FileOutputStream.java:270)
May 03 17:10:47 ip-10-248-132-14 friendly-tailor[2278]: at java.io.FileOutputStream.<init>(FileOutputStream.java:213)
May 03 17:10:47 ip-10-248-132-14 friendly-tailor[2278]: at java.io.FileOutputStream.<init>(FileOutputStream.java:162)
May 03 17:10:47 ip-10-248-132-14 friendly-tailor[2278]: at play.core.server.ProdServerStart$.createPidFile(ProdServerStart.scala:131)
May 03 17:10:47 ip-10-248-132-14 friendly-tailor[2278]: at play.core.server.ProdServerStart$.start(ProdServerStart.scala:45)
May 03 17:10:47 ip-10-248-132-14 friendly-tailor[2278]: at play.core.server.ProdServerStart$.main(ProdServerStart.scala:27)
May 03 17:10:47 ip-10-248-132-14 friendly-tailor[2278]: at play.core.server.ProdServerStart.main(ProdServerStart.scala)
May 03 17:10:47 ip-10-248-132-14 systemd[1]: friendly-tailor.service: Main process exited, code=exited, status=255/n/a
May 03 17:10:47 ip-10-248-132-14 systemd[1]: friendly-tailor.service: Unit entered failed state.
May 03 17:10:47 ip-10-248-132-14 systemd[1]: friendly-tailor.service: Failed with result 'exit-code'.
May 03 17:11:47 ip-10-248-132-14 sys